frame/support/test/tests/pallet_ui/trait_003.stderr
error[E0405]: cannot find trait `Get` in this scope
 --> $DIR/trait_003.rs:9:11
  |
9 |         type U: Get<u8>;
  |                 ^^^ not found in this scope
  |
help: consider importing one of these items
  |
3 |     use frame_support::pallet_prelude::Get;
  |
3 |     use frame_support::traits::Get;
  |
